Se hacen tests integracion
se hacen tests de integracion y se hace que se pueda conectar tanto local como externamente(netbeans y docker respectivamente)